# EIST

eist24deps-go68maj/: build.gradle
eist24deps-go68maj/src/exampledeps/: Client.java
eist24l02p01-go68maj/src/main/java/de/tum/in/ase/eist/service/: PersonService.java
eist24l02p01-go68maj/src/test/java/de/tum/in/ase/eist/: PersonIntegrationTest.java  PersonServiceTest.java
eist24l09p01-go68maj/: create_branch.py
eist24l09p01-go68maj/src/de/tum/in/ase/eist/: Hello.java
eist24l09p02-go68maj/: .gitignore  build.gradle.kts  settings.gradle.kts
eist24l09p02-go68maj/gradle/wrapper/: gradle-wrapper.properties
eist24l09p02-go68maj/src/main/java/de/tum/in/ase/eist/: App.java  UniversityApp.java
eist24l09p02-go68maj/src/test/java/de/tum/in/ase/eist/: UniversityAppTest.java
eist24l09p03-go68maj/: .gitignore  Makefile  WORKSPACE.bazel
eist24l09p03-go68maj/client-side/: BUILD.bazel
eist24l09p03-go68maj/client-side/src/eist/: Employee.java  Event.java  EventClient.java  EventFacade.java  Main.java  TokenGeneratorClient.java
eist24l09p03-go68maj/server-side/: requirements.txt
eist24l09p03-go68maj/server-side/EventMicroservice/: BUILD.bazel
eist24l09p03-go68maj/server-side/EventMicroservice/src/: event_microservice.py
eist24l09p03-go68maj/server-side/TokenGeneratorMicroservice/: BUILD.bazel
eist24l09p03-go68maj/server-side/TokenGeneratorMicroservice/src/: token_generator_microservice.py
eist24toefacadeacl-go68maj/: README.md  build.gradle  settings.gradle
eist24toefacadeacl-go68maj/InventoryMicroservice/: build.gradle
eist24toefacadeacl-go68maj/InventoryMicroservice/src/eist/inventorymiscroservice/: InventoryController.java  InventoryMicroserviceApplication.java
eist24toefacadeacl-go68maj/ShippingMicroservice/: settings.gradle
eist24toefacadeacl-go68maj/ShippingMicroservice/src/eist/shippingmicroservice/: ShippingController.java  ShippingMicroserviceApplication.java
eist24toefacadeacl-go68maj/src/eist/: AccessControlList.java  Client.java  FactoryFacade.java  InventoryClient.java  ShippingClient.java
