load('@bazel_tools//tools/build_defs/repo:http.bzl', 'http_archive')

RULES_JVM_EXTERNAL_TAG = '4.1'
RULES_JVM_EXTERNAL_SHA = 'f36441aa876c4f6427bfb2d1f2d723b48e9d930b62662bf723ddfb8fc80f0140'

http_archive(
  name = 'rules_jvm_external',
  strip_prefix = 'rules_jvm_external-%s' % RULES_JVM_EXTERNAL_TAG,
  sha256 = RULES_JVM_EXTERNAL_SHA,
  url = 'https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip' % RULES_JVM_EXTERNAL_TAG,
)

load('@rules_jvm_external//:defs.bzl', 'maven_install')

maven_install(
  artifacts = [
    'org.springframework.boot:spring-boot-starter-web:2.1.6.RELEASE',
    'org.springframework.boot:spring-boot-starter-webflux:2.1.6.RELEASE',
    'org.springframework:spring-web:5.1.5.RELEASE',
  ],
  repositories = [
    'https://repo1.maven.org/maven2',
  ],
  fetch_sources = True,
)

# Helpful documentation for Python rules can be found here:
# https://rules-python.readthedocs.io/en/latest/index.html

# This loads the http_archive function from the bazel_tools dependency.
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# This downloads the rules_python dependency from GitHub. 
http_archive(
    name = "rules_python",
    sha256 = "e85ae30de33625a63eca7fc40a94fea845e641888e52f32b6beea91e8b1b2793",
    strip_prefix = "rules_python-0.27.1",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.27.1/rules_python-0.27.1.tar.gz",
)

# This loads the py_repositories function from the rules_python dependency.
load("@rules_python//python:repositories.bzl", "py_repositories")

# We install the rules_python dependencies using the function below.
py_repositories()

# This loads the pip_parse function from the rules_python dependency.
load("@rules_python//python:pip.bzl", "pip_parse")

# We install the dependencies from the requirements.txt file using the function
# below.
pip_parse(
    name = "pip_deps_server",
    requirements_lock = "//server-side/requirements.txt",
    # TODO: Add the path to the requirements.txt file.
)

# This loads the install_deps function from the pip_deps dependency.
load("@pip_deps_server//:requirements.bzl", "install_deps")

# We install the dependencies using the function below.
install_deps()
